<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signupScrollView"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignUpActivity">

        <TextView
            android:id="@+id/usernameViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="150dp"
            android:text="@string/option_username"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--ImageView to preview the selected image-->

        <Button
            android:id="@+id/profileImageButtonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="CHOOSE PROFILE IMAGE"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalIntroductionTextSignUp" />

        <!--ImageView to preview the selected image-->
        <ImageView
            android:id="@+id/profileViewImage"
            android:layout_width="281dp"
            android:layout_height="246dp"
            android:layout_below="@id/profileImageButtonSignUp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImageButtonSignUp"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/emailViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="150dp"
            android:text="Email:"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthDatePickerSignUp" />

        <TextView
            android:id="@+id/numberViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:text="Number:"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailViewSignUp" />

        <TextView
            android:id="@+id/majorViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:text="Major:"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numberViewSignUp" />

        <TextView
            android:id="@+id/grauationYearViewSIgnUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Graduation Year:"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/majorViewSignUp" />

        <TextView
            android:id="@+id/personIntroductionViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Personal Introduction:"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/graduationYearSpinnerSignUp" />

        <TextView
            android:id="@+id/personalityQuestions1ViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Are you a morning person?"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileViewImage" />

        <TextView
            android:id="@+id/personalityQuestions2ViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="How do you like your spaces?"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalityQuestion1SpinnerSignUp" />

        <TextView
            android:id="@+id/personalityQuestions3ViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="What do you think about guests?"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalityQuestion2SpinnerSignUp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="150dp"
            android:text="Date Of Birth"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextSignUp" />

        <EditText
            android:id="@+id/userNameTextSignUp"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="AwesomeTom"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/usernameViewSignUp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/majorTextSignUp"
            android:layout_width="239dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="Computer Science"
            android:inputType="textPersonName"
            android:maxLength="50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/passwordViewSignUp"
            app:layout_constraintTop_toBottomOf="@+id/numberTextSignUp" />

        <TextView
            android:id="@+id/passwordViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="150dp"
            android:text="Password:"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.015"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameViewSignUp" />

        <Button
            android:id="@+id/birthDatePickerSignUp"
            style="?android:spinnerStyle"
            android:layout_width="239dp"
            android:layout_height="52dp"
            android:layout_marginStart="84dp"
            android:layout_marginRight="84dp"
            android:onClick="openDatePicker"
            android:text="JAN 01 2020"
            android:textColor="#8C8C8C"
            android:textSize="20sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <ImageView
            android:id="@+id/backButtonSignUp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:onClick="onBackClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:drawable/ic_menu_revert"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/numberTextSignUp"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="2134656775"
            android:inputType="phone"
            android:maxLength="10"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextSignUp" />

        <EditText
            android:id="@+id/emailTextSignUp"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="tommytrojan@usc.edu"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthDatePickerSignUp" />

        <EditText
            android:id="@+id/passwordTextSignUp"
            android:layout_width="239dp"
            android:layout_height="48dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="SecretTom1"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameTextSignUp" />

        <Spinner
            android:id="@+id/graduationYearSpinnerSignUp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grauationYearViewSIgnUp" />

        <Spinner
            android:id="@+id/personalityQuestion1SpinnerSignUp"
            android:layout_width="302dp"
            android:layout_height="54dp"
            android:layout_marginTop="10dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalityQuestions1ViewSignUp" />

        <Spinner
            android:id="@+id/personalityQuestion2SpinnerSignUp"
            android:layout_width="302dp"
            android:layout_height="54dp"
            android:layout_marginTop="10dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalityQuestions2ViewSignUp" />

        <Spinner
            android:id="@+id/personalityQuestion3SpinnerSignUp"
            android:layout_width="302dp"
            android:layout_height="54dp"
            android:layout_marginTop="10dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalityQuestions3ViewSignUp" />

        <EditText
            android:id="@+id/personalIntroductionTextSignUp"
            android:layout_width="342dp"
            android:layout_height="117dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="I am a third year student at usc I love to take part in tailgates, research, and days by the beach"
            android:inputType="textMultiLine"
            android:maxLength="250"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personIntroductionViewSignUp" />

        <Button
            android:id="@+id/createAccountButtonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:onClick="onCreateClick"
            android:text="CREATE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personalityQuestion3SpinnerSignUp"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>