<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account"
        android:title="Profile" />

    <item
        android:id="@+id/navigation_invites"
        android:icon="@drawable/ic_invite"
        android:title="Invites" />

    <item
        android:id="@+id/navigation_invite"
        android:icon="@drawable/ic_action_name"
        android:title="Create Invite" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>